@@ -1,3 +1,12 @@
+Fri Oct 13 19:39:53 2000  George Lebl <jirka@5z.com>
+
+	* panel_config_global.h, session.c, gnome-panel-properties.c,
+	  basep-widget.c:  add a global option to turn off the collision
+	  avoidance (it's on by default of course though)
+
+	* basep-widget.c, foobar-widget.c: panel_list is a GSList not
+	  a GList.
+
 Fri Oct 13 17:26:25 2000  George Lebl <jirka@5z.com>
 
 	* aligned-widget.c, basep-widget.[ch], border-widget.h,
